--- a/file.css
+++ b/file.css
@@ -39,6 +39,7 @@
 
 /* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
 .flip-card {
+   
     height: 300px;
     float: left;
     width: 20%;
@@ -62,6 +63,7 @@
   /* Do an horizontal flip when you move the mouse over the flip box container */
   .flip-card:hover .flip-card-inner {
     transform: rotateY(180deg);
+    
   }
   
   /* Position the front and back side */
@@ -69,6 +71,9 @@
     position: absolute;
     width: 100%;
     height: 100%;
+    -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+
   }
   
   /* Style the front side (fallback if image is missing) */
